# qingshan

./: .gitignore  .gitmodules  LICENSE  README.md
qingshan/: CMakeLists.txt  Main.qml  afx.h  main.cpp  stringTable.h
qingshan/UIhandler/: dlgmain.cpp  dlgmain.h
qingshan/win/: regEdit.cpp  regEdit.h  shapi.cpp  shapi.h
